--- a/.gitignore
+++ b/.gitignore
@@ -191,3 +191,7 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/java,eclipse,intellij,maven
+
+
+# Start of project specific files
+settings.cnf
